# wakil

./: .dockerignore  .gitignore  .gitmodules  .golangci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cleanup-hardening-audit.md  config.example.json  ctrl_r_plan.md  go.mod  go.sum  google_search_mcp.py  subagent-endpoint-feasibility-report.md  subagent-mcp-gap-analysis.md  tui_refurbishment_plan_v2.md  write-capable-subagents-delta-verify.md  write-capable-subagents-feasibility.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
cmd/google_search_mcp/: main.go
cmd/wakil/: app_builder.go  client_test.go  command_test.go  config_test.go  handoff_test.go  headless_test.go  main.go  mentions_test.go  misc_test.go  readonly_test.go  resilience_test.go  run.go  session_extra_test.go  session_test.go  verify_test.go  workflow_test.go
docker/: entrypoint.sh
docs/: discovery-anthropic-cache-control.md  mashura-context-limit.md  memory.md  proposal-lsp-integration.md  proposal-session-resume-ux.md  proposal-ssh-signing-passthrough.md  proposal-subagent-budget.md  staging.md
docs/design/: code-index-spike.md  commit-signing-design.md  lsp-integration.md
internal/agent/: agent_async.go  app.go  app_options.go  backends.go  backends_test.go  bg_registry.go  cachedtok_cost_test.go  characterization_test.go  cmd.go  commands.go  compact.go  compact_test.go  confinement_breaker_test.go  learn.go  (+77 more)
prompts/: agent.txt  embed.go  embed_test.go
scripts/: check_coverage.sh
tb_adapter/: pyproject.toml  test_wakil_agent.py  wakil_agent.py
(+149 files in other folders)
