[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wakil-tb-adapter"
version = "0.1.0"
description = "Terminal-Bench adapter for Wakil"
requires-python = ">=3.11"
# terminal_bench is a runtime dep but intentionally not listed here so this
# package can be installed (and its imports linted) without a full TB install.
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["tb_adapter*"]
